funciones auxiliares (crear dataset, leer fichero de configuración, ejemplo de tensorboard...)

--- a/effdet/utils/model.config
+++ b/effdet/utils/model.config
@@ -1,4 +1,4 @@
-[MODEL]
-architecture = tf_efficientnetv2_l
-wbf_iou_threshold = 0.4
-prediction_confidence = 0.2
+[DATASET]
+d602020 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/exp602020/"
+d8010 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/test801010/"
+d701515 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/action/"
