versión en pruebas de módulo para leer ficheros de configuración

--- a/effdet/utils/model.config
+++ b/effdet/utils/model.config
@@ -1,4 +1,19 @@
-[DATASET]
+[ds]
 d602020 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/exp602020/"
 d8010 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/test801010/"
 d701515 = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/action/"
+
+[train602020]
+dataset = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/d602020/"
+epochs = 30
+name = d602020
+
+[train801010]
+dataset = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/d801010/"
+epochs = 30
+name = d801010
+
+[train701515]
+dataset = "/media/rtx3090/Disco2TB/cvazquez/nico/datasets/Tomato_1280x720/ImageSets/d701515/"
+epochs = 30
+name = d701515
